# magma-cycling

./: .dockerignore  .env.example  .env.withings  .gitignore  .pre-commit-config.yaml  .pycodestyle  .ruff.toml  .sprint_r8_complete  .zsh_aliases_shift_sessions  ALIASES.md  ANALYSE_MOA_SPRINT_R3_FINAL.md  ARCHIVE_README.md  AUDIT_NAMING_FILES.md  AUDIT_WEEKLY_REPORTS.md  CHANGELOG.md  CLAUDE_CODE_COVERAGE_IMPROVEMENT.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  COMMANDS.md  CONTRIBUTING.md  DAILY_WORKFLOW.md  DIAGNOSTIC_UPLOAD_422.md  ENCODING_UTF8_MIGRATION.md  GARTNER_TIME_INVENTORY.md  GRAFCET_WORKFLOW_COMPLET.md  LICENSE  MIGRATION_AI_PROVIDERS.md  MIGRATION_CONTROL_TOWER.md  PHASE2_P0_FIXES_SUMMARY.md  PHASE3_P0_FIXES_SUMMARY.md  PROMPT_COMPLETE_DOCSTRING_MIGRATION.md  RAPPORT_CLASSIFICATION_SCRIPTS.md  RAPPORT_CORRECTIONS_DOC.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY_20260208.md  SPRINT_R1_PROGRESS.md  SPRINT_R4PP_VALIDATION_MOA.md  SPRINT_R4_SPECIFICATIONS.md  (+20 more)
bilans_hebdo/: README.md
cyclisme_training_logs/: API_METHOD_TO_ADD.md  README_ANALYSIS.md  WORKFLOW_GUIDE.md  WORKFLOW_WITH_FEEDBACK.md  backup.sh  check_activity_sources.py  collect_athlete_feedback.py  commit_seance.sh  config.py  daily_sync.py  dashboard.py  debug_detection.py  diagnose-matching.py  fix_weekly_reports_casing.py  insert_analysis.py  intervals_format_validator.py  manage_workflow_state.py  mcp_server.py  mcp_transport.py  migrate_logs_toward_weekly_reports.sh  monthly_analysis.py  normalize_weekly_reports_casing.py  organize_weekly_report.py  planned_sessions_checker.py  prepare_analysis.py  prepare_weekly_report.py  rest_and_cancellations.py  shift_sessions.py  stats.py  sync_intervals.py  test_7days.py  test_all_fields.py  test_create_event.py  test_filters.py  test_wellness.py  update_session_status.py  upload_workouts.py  validate_naming_convention.py  weekly_analysis.py  weekly_planner.py  (+3 more)
docker/: .dockerignore  Dockerfile  README-NAS.md  README.md  crontab  docker-compose.mtls.yml  docker-compose.yml  entrypoint.sh  env.example
docs/: BACKFILL_GUIDE.md  CHANGELOG.md  CHANGELOG.md.backup-20251125-191828  DIAGNOSTIC_COMPLET.md  GESTION_REPOS_ANNULATIONS.md  GUIDE_REMISE_EN_PRODUCTION.md  GUIDE_UPLOAD_WORKOUTS.md.backup-20251125-191827  INTEGRATION_WORKFLOW.md  PR_SPRINT_R10.md  ROADMAP.md  SESSION_26DEC2025_BACKFILL_CLEANUP.md  SHIFT_SESSIONS_ALIASES.md  SPRINT_R10_MVP_COMPLETION.md  SPRINT_R2_VALIDATION_S074.md  SPRINT_R8_PHASE3_SUMMARY.md  VETO_PROTOCOL.md  conf.py  index.rst  onboarding-zwift-foudre.md
logs/: metrics-evolution.md  training-learnings.md  workout-templates.md  workouts-history.md
magma_cycling/: __init__.py  check_activity_sources.py  cli.py  collect_athlete_feedback.py  daily_sync.py  dashboard.py  debug_detection.py  diagnose-matching.py  fix_weekly_reports_casing.py  insert_analysis.py  intervals_format_validator.py  manage_workflow_state.py  mcp_server.py  monthly_analysis.py  normalize_weekly_reports_casing.py  organize_weekly_report.py  paths.py  planned_sessions_checker.py  prepare_analysis.py  prepare_weekly_report.py  race_knowledge.py  rest_and_cancellations.py  session_monitor.py  shift_sessions.py  stats.py  sync_intervals.py  update_check.py  update_session_status.py  upload_workouts.py  validate_naming_convention.py  weekly_analysis.py  weekly_planner.py  workflow_coach.py  workflow_state.py  workout_parser.py
packaging/: magma-cycling.spec  mcp-server.spec
patches/: CHECKSUMS.md  add_skipped_sessions_detection.patch  add_skipped_status_support.patch
project-docs/: ARCHITECTURE.md  AUTOMATION.md  BREVO_SETUP.md  CHANGELOG.md  CLAUDE_CODE_GUIDELINES.md  CLAUDE_WORK_PROTOCOL.md  COMMIT_CONVENTIONS.md  COMPENSATION_TSS_PROACTIVE.md  CONTROL_TOWER.md  FEATURES_FEB_2026.md  FEEDBACK_INTERVALS.md  FLOAT_PRECISION_AUDIT.md  GUIDE_COMMIT_GITHUB.md  LAUNCHAGENTS_CURRENT_STATE.md  LAUNCHAGENTS_MIGRATION_PLAN.md  MAGIC_TEST_RECOMMENDATION.md  MCP_HOT_RELOAD.md  MCP_INTEGRATION.md  MEMORY_GRAPH_BEFORE_AFTER_ANALYSIS.md  PLANNING_PREFERENCES.md  README.md  REFACTORING_OPPORTUNITIES.md  REVIEW_WARNINGS_EXPLAINED.md  ROADMAP.md  SAFE_PLANNING_PATTERNS.md  SESSION_27DEC2025_RECOVERY_AND_COMPLETION.md  SESSION_LOGS_MANAGEMENT.md  SESSION_SUMMARY_2026-01-03.md  SHALLOW_COPY_AUDIT.md  SPRINT_NAMING.md  SPRINT_R4_R5_RECAP.md  SPRINT_R9E_REPORT.md  STATUS_RECOMMANDATIONS_AUDIT.md  TODO_SERVO_MODE_ISSUES.md  WORKFLOW_COACH_REFACTORING.md  onboarding-club-zwift.md
references/: cycling_training_concepts.md  guide_utilisation_prompt.md  project_prompt_v2.md  race_calendars.yaml  templates_logs_initialisation.md
scripts/: __init__.py  analyse_documentation.sh  apply_workflow_patch_final.py  check_activity_sources.py  collect_athlete_feedback.py  debug_detection.py  demo_rest_handling.py  diagnose-matching.py  fix_d202_docstrings.py  fix_d205_docstrings.py  fix_d400_docstrings.py  fix_d400_safe.py  fix_d401_docstrings.py  fix_trailing_period_bug.py  fix_upload_workouts_doc.sh  fix_weekly_reports_casing.py  insert_analysis.py  mark_cancelled.py  mon_patch_minimaliste.patch  normalize_weekly_reports_casing.py  organize_weekly_report.py  planned_sessions_checker.py  prepare_analysis.py  prepare_analysis.py.backup.20251211  prepare_analysis_fix_none_metrics.patch  prepare_weekly_report.py  rest_and_cancellations.py  setup_branch_protection.py  setup_branch_protection.sh  setup_branch_ruleset.sh  setup_documentation_complete.sh  stats.py  sync_intervals.py  test-mcp-tool.py  upload_workouts.py  validate_gartner_tags.py  validate_naming_convention.py  weekly_analysis.py  workflow_coach.py  workflow_state.py
test-data/: .config-multisaison.json  .config.json  activities_tracking.json  workouts-history.md
tests/: conftest.py  debug_14nov_check.py  debug_7days_check.py  debug_activity_details.py  debug_all_fields.py  debug_api.py  debug_config_ai.py  debug_filters.py  debug_skipped_detection.py  debug_veto_integration.py  debug_wellness.py  debug_workflow_state_extensions.py  test_14nov.py  test_activity_details.py  test_all_fields.py  test_api.py  test_cli.py  (+76 more)
(+1321 files in other folders)
