[tool.poetry]
name = "cyclisme-training-logs"
version = "1.0.0"
description = "Système automatisé d'analyse entraînements cyclisme"
authors = ["Stéphane"]
readme = "README.md"
packages = [{include = "cyclisme_training_logs"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
anthropic = "^0.39.0"
mistralai = "^0.1.0"
openai = "^1.6.0"
pytz = "^2023.3"
python-dateutil = "^2.8.2"
tabulate = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
ipython = "^8.18.1"
ipdb = "^0.13.13"
sphinx = "^9.0.4"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.scripts]
# === Scripts Principaux (Usage Quotidien) ===
weekly-analysis = "cyclisme_training_logs.workflows.workflow_weekly:main"
weekly-analysis-legacy = "cyclisme_training_logs.weekly_analysis:main"  # DEPRECATED - Gartner E
upload-workouts = "cyclisme_training_logs.upload_workouts:main"
prepare-analysis = "cyclisme_training_logs.prepare_analysis:main"

# === Workflow & Automation ===
collect-feedback = "cyclisme_training_logs.collect_athlete_feedback:main"
workflow-coach = "cyclisme_training_logs.workflow_coach:main"
insert-analysis = "cyclisme_training_logs.insert_analysis:main"
manage-state = "cyclisme_training_logs.manage_workflow_state:main"
backfill-history = "cyclisme_training_logs.scripts.backfill_history:main"

# === Utilitaires ===
sync-intervals = "cyclisme_training_logs.sync_intervals:main"
planned-checker = "cyclisme_training_logs.planned_sessions_checker:main"
stats = "cyclisme_training_logs.stats:main"
validate-templates = "cyclisme_training_logs.scripts.validate_templates:main"

# === Rapports & Organisation ===
organize-report = "cyclisme_training_logs.organize_weekly_report:main"
weekly-planner = "cyclisme_training_logs.weekly_planner:main"

# === Debug & Validation ===
check-sources = "cyclisme_training_logs.check_activity_sources:main"
validate-naming = "cyclisme_training_logs.validate_naming_convention:main"
normalize-reports = "cyclisme_training_logs.normalize_weekly_reports_casing:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
