[tool.poetry]
name = "cyclisme-training-logs"
version = "2.2.0"
description = "Système automatisé d'analyse entraînements cyclisme"
authors = ["Stéphane"]
readme = "README.md"
packages = [{include = "cyclisme_training_logs"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
anthropic = "^0.75.0"
mistralai = "^1.10.0"
openai = "^2.14.0"
pytz = "^2023.3"
python-dateutil = "^2.8.2"
tabulate = "^0.9.0"
rich = "^13.7.0"
sib-api-v3-sdk = "^7.6.0"
markdown2 = "^2.5.4"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.12.0"
black = "^24.3.0"
ruff = "^0.8.0"
mypy = "^1.7.1"
ipython = "^8.18.1"
ipdb = "^0.13.13"
sphinx = "^9.0.4"
sphinx-rtd-theme = "^3.0.2"
poethepoet = "^0.39.0"
types-requests = "^2.32.4.20250913"
types-pyperclip = "^1.9.0.20250801"
pycodestyle = "^2.14.0"
pydeps = "^3.0.1"
pre-commit = "^4.5.1"
isort = "^7.0.0"
memory-graph = "^0.3.65"

[tool.poetry.scripts]
# === Dashboard & Overview ===
dashboard = "cyclisme_training_logs.dashboard:main"

# === Scripts Principaux (Usage Quotidien) ===
weekly-analysis = "cyclisme_training_logs.workflows.workflow_weekly:main"
weekly-analysis-legacy = "cyclisme_training_logs.weekly_analysis:main"  # DEPRECATED - Gartner E
monthly-analysis = "cyclisme_training_logs.monthly_analysis:main"
upload-workouts = "cyclisme_training_logs.upload_workouts:main"
prepare-analysis = "cyclisme_training_logs.prepare_analysis:main"

# === Workflow & Automation ===
collect-feedback = "cyclisme_training_logs.collect_athlete_feedback:main"
workflow-coach = "cyclisme_training_logs.workflow_coach:main"
end-of-week = "cyclisme_training_logs.workflows.end_of_week:main"
daily-sync = "cyclisme_training_logs.daily_sync:main"
insert-analysis = "cyclisme_training_logs.insert_analysis:main"
manage-state = "cyclisme_training_logs.manage_workflow_state:main"
backfill-history = "cyclisme_training_logs.scripts.backfill_history:main"

# === Utilitaires ===
sync-intervals = "cyclisme_training_logs.sync_intervals:main"
planned-checker = "cyclisme_training_logs.planned_sessions_checker:main"
update-session = "cyclisme_training_logs.update_session_status:main"
stats = "cyclisme_training_logs.stats:main"
validate-templates = "cyclisme_training_logs.scripts.validate_templates:main"
backfill-intelligence = "cyclisme_training_logs.scripts.backfill_intelligence:main"

# === Rapports & Organisation ===
organize-report = "cyclisme_training_logs.organize_weekly_report:main"
weekly-planner = "cyclisme_training_logs.weekly_planner:main"
generate-report = "cyclisme_training_logs.reports.cli:main"

# === External Data Sources ===
search-zwift-workouts = "cyclisme_training_logs.scripts.search_zwift_workouts:main"

# === Debug & Validation ===
check-sources = "cyclisme_training_logs.check_activity_sources:main"
validate-naming = "cyclisme_training_logs.validate_naming_convention:main"
normalize-reports = "cyclisme_training_logs.normalize_weekly_reports_casing:main"

# === Monitoring ===
check-workout-adherence = "scripts.monitoring.check_workout_adherence:main"
pid-daily-evaluation = "cyclisme_training_logs.scripts.pid_daily_evaluation:main"

# === Analysis ===
analyze-baseline = "cyclisme_training_logs.analysis.baseline_preliminary:main"

# === Maintenance & Cleanup ===
cleanup-archives = "scripts.maintenance.cleanup_old_archives:main"
project-clean = "scripts.maintenance.project_cleaner:main"
clear-week-planning = "scripts.maintenance.clear_week_planning:main"
format-planning = "scripts.maintenance.format_planning:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/debug/",
    "scripts/fix_",
    "withings_integration/",
    "backups/",
    "patches/",
]

[tool.poe.tasks]
# Tests
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=cyclisme_training_logs --cov-report=html"
test-intelligence = "pytest tests/intelligence/ -v"
test-planning = "pytest tests/planning/ -v"
test-quick = "pytest tests/ -x -v"

# Code Quality
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "black ."
format-check = "black . --check"
type-check = "mypy cyclisme_training_logs/"

# All checks
check = ["format-check", "lint", "type-check", "test"]

# Documentation
docs-build = "sphinx-build -b html docs docs/_build/html"
docs-clean = "rm -rf docs/_build"
docs-rebuild = ["docs-clean", "docs-build"]

# Utilities
clean = """
    rm -rf .pytest_cache .ruff_cache .mypy_cache
    find . -type d -name __pycache__ -exec rm -rf {} +
    find . -type f -name '*.pyc' -delete
"""
