[tool.poetry]
name = "magma-cycling"
version = "3.2.0"
description = "Système automatisé d'analyse entraînements cyclisme"
authors = ["Stéphane"]
readme = "README.md"
packages = [{include = "magma_cycling"}]
include = [
    "magma_cycling/external/seed_data/*.json",
    "magma_cycling/workflows/planner/templates/*.md",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
anthropic = "^0.75.0"
mistralai = "^1.10.0"
openai = "^2.14.0"
pyyaml = "^6.0"
pytz = "^2023.3"
python-dateutil = "^2.8.2"
tabulate = "^0.9.0"
rich = "^13.7.0"
sib-api-v3-sdk = "^7.6.0"
markdown2 = "^2.5.4"
beautifulsoup4 = "^4.12.0"
numpy = "^2.4.2"
mcp = "^1.26.0"
mcp-http-transport = "^0.1.0"
pynacl = "^1.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.12.0"
black = "^24.3.0"
ruff = "^0.8.0"
mypy = "^1.7.1"
ipython = "^8.18.1"
ipdb = "^0.13.13"
sphinx = "^9.0.4"
sphinx-rtd-theme = "^3.0.2"
poethepoet = "^0.39.0"
types-requests = "^2.32.4.20250913"
types-pyperclip = "^1.9.0.20250801"
pycodestyle = "^2.14.0"
pydeps = "^3.0.1"
pre-commit = "^4.5.1"
isort = "^7.0.0"
memory-graph = "^0.3.65"
watchdog = "^6.0.0"
pytest-asyncio = "^1.3.0"
fitparse = "^1.2.0"
garmin-fit-sdk = "^21.195.0"
matplotlib = "^3.10.8"

[tool.poetry.scripts]
# === MCP Server ===
mcp-server = "magma_cycling.mcp_server:main"

# === Dashboard & Overview ===
dashboard = "magma_cycling.dashboard:main"

# === Scripts Principaux (Usage Quotidien) ===
weekly-analysis = "magma_cycling.workflows.workflow_weekly:main"
monthly-analysis = "magma_cycling.monthly_analysis:main"
upload-workouts = "magma_cycling.upload_workouts:main"
prepare-analysis = "magma_cycling.prepare_analysis:main"

# === Workflow & Automation ===
collect-feedback = "magma_cycling.collect_athlete_feedback:main"
workflow-coach = "magma_cycling.workflow_coach:main"
end-of-week = "magma_cycling.workflows.end_of_week:main"
daily-sync = "magma_cycling.daily_sync:main"
insert-analysis = "magma_cycling.insert_analysis:main"
manage-state = "magma_cycling.manage_workflow_state:main"
backfill-history = "magma_cycling.scripts.backfill_history:main"

# === Utilitaires ===
sync-intervals = "magma_cycling.sync_intervals:main"
planned-checker = "magma_cycling.planned_sessions_checker:main"
update-session = "magma_cycling.update_session_status:main"
shift-sessions = "magma_cycling.shift_sessions:main"
validate-templates = "magma_cycling.scripts.validate_templates:main"
backfill-intelligence = "magma_cycling.scripts.backfill_intelligence:main"

# === Rapports & Organisation ===
organize-report = "magma_cycling.organize_weekly_report:main"
weekly-planner = "magma_cycling.weekly_planner:main"
generate-report = "magma_cycling.reports.cli:main"

# === External Data Sources ===
search-zwift-workouts = "magma_cycling.scripts.search_zwift_workouts:main"
populate-zwift-cache = "magma_cycling.scripts.populate_zwift_cache:main"
seed-zwift-workouts = "magma_cycling.scripts.seed_zwift_workouts:main"

# === Debug & Validation ===
check-sources = "magma_cycling.check_activity_sources:main"
validate-naming = "magma_cycling.validate_naming_convention:main"
normalize-reports = "magma_cycling.normalize_weekly_reports_casing:main"

# === Monitoring ===
session-monitor = "magma_cycling.session_monitor:main"
check-workout-adherence = "scripts.monitoring.check_workout_adherence:main"
pid-daily-evaluation = "magma_cycling.scripts.pid_daily_evaluation:main"

# === Health ===
withings-presync = "magma_cycling.scripts.withings_presync:main"

# === Setup ===
setup = "magma_cycling.scripts.setup_wizard:main"

# === Analysis ===
analyze-baseline = "magma_cycling.analysis.baseline_preliminary:main"

# === Maintenance & Cleanup ===
cleanup-archives = "scripts.maintenance.cleanup_old_archives:main"
project-clean = "scripts.maintenance.project_cleaner:main"
clear-week-planning = "scripts.maintenance.clear_week_planning:main"
check-tools-docs = "scripts.maintenance.check_tools_documentation:main"
format-planning = "scripts.maintenance.format_planning:main"
data-repo-sync = "scripts.maintenance.data_repo_sync:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.coverage.run]
source = ["magma_cycling"]
omit = [
    "magma_cycling/fix_weekly_reports_casing.py",
    "magma_cycling/normalize_weekly_reports_casing.py",
    "magma_cycling/organize_weekly_report.py",
    "magma_cycling/debug_detection.py",
    "magma_cycling/diagnose-matching.py",
    "magma_cycling/check_activity_sources.py",
    "magma_cycling/dashboard.py",
    "magma_cycling/session_monitor.py",
    "magma_cycling/collect_athlete_feedback.py",
    "magma_cycling/scripts/populate_zwift_cache.py",
    "magma_cycling/scripts/search_zwift_workouts.py",
    "magma_cycling/scripts/seed_zwift_workouts.py",
    "magma_cycling/scripts/backfill_history.py",
    "magma_cycling/scripts/initialize_pid_controller.py",
    "magma_cycling/scripts/setup_withings.py",
    "magma_cycling/scripts/setup_wizard.py",
    "magma_cycling/scripts/withings_presync.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/debug/",
    "scripts/fix_",
    "withings_integration/",
    "backups/",
    "patches/",
]

[tool.semantic_release]
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.remote]
type = "github"
name = "origin"
token = { env = "GH_TOKEN" }

[tool.poe.tasks]
# Tests
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=magma_cycling --cov-report=html"
test-intelligence = "pytest tests/intelligence/ -v"
test-planning = "pytest tests/planning/ -v"
test-quick = "pytest tests/ -x -v"

# Code Quality
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "black ."
format-check = "black . --check"
type-check = "mypy magma_cycling/"

# All checks
check = ["format-check", "lint", "type-check", "test"]

# Documentation
docs-build = "sphinx-build -b html docs docs/_build/html"
docs-clean = "rm -rf docs/_build"
docs-rebuild = ["docs-clean", "docs-build"]

# Utilities
clean = """
    rm -rf .pytest_cache .ruff_cache .mypy_cache
    find . -type d -name __pycache__ -exec rm -rf {} +
    find . -type f -name '*.pyc' -delete
"""
